fixtures/frontend/milestone-2/valid/custom-source-recurrence-wakeup/main.aivi
type Int -> Int -> Int
func step = x current=>    x

signal refresh = 0

@source custom.feed refresh
signal updateEvents : Signal Int

signal updates : Signal Int = updateEvents
 +|> 0 step
