fixtures/frontend/milestone-2/invalid/orphan-recur-step/main.aivi
func step = x=>    x

value broken = 0
 <|@ step
